# vk-school-monitor

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
src/: collector.py  main.py
src/agent/: agent.py  schemas.py
src/api/: routes.py
src/api/dto/: base.py  schemas.py
src/client/: vk_client.py
src/client/scripts/: __init__.py  groups_get_by_id_script.py  groups_get_script.py  users_get_script.py  wall_get_script.py
src/db/methods/: alert.py  group.py  post.py  user.py
src/db/migrations/versions/: 103a097306dc_add_groups.py  5ee0680462ba_fix_alert_unique_constraint.py  8e45ddf21547_remove_subscribed_at.py  c0ffee5eed01_seed_statuses.py
src/db/models/: __init__.py  alert.py  group.py  post.py  user.py
src/utils/: utils.py
web/: index.html
