[project]
name = "vk-school-monitor"
version = "0.1.0"
description = "Мониторинг учеников школы и выявление деструктивного контента"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "lmstudio>=1.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]
